[package]
name = "df2"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Reads Optech df2 waveform data."
readme = "README.md"
keywords = ["optech", "df2", "lidar", "waveform"]
license = "MIT"

[[bin]]
name = "df2"
doc = false

[dependencies]
byteorder = "0.5"
docopt = "0.6"
rustc-serialize = "0.3"
